--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,12 @@
   }
 }
 
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  padding: 0;
+  margin: 0;
+
 }
