--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@
   }
 }
 
+html {
+  scroll-behavior: auto !important;
+}
+
 
 body {
   background: var(--background);
@@ -26,5 +30,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 
 }
